--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
 <div class="container"
      fxLayout
@@ -9,15 +9,15 @@
   <div class="item item-1" fxFlex="30%"></div>
   <div class="item item-2" fxFlex="">
       <mat-list>
-          <h3 mat-subheader>Ford</h3>
+          <h3 mat-subheader>{{car.name}}</h3>
           <button mat-button color="warn">Delete</button>
           <button mat-button color="primary">Buy</button>
           <mat-list-item *ngFor="let folder of folders">
             <mat-icon mat-list-icon>folder</mat-icon>
-            <h4 mat-line>{{folder.name}}</h4>
-            <p mat-line> {{folder.updated | date}} </p>
+            <h4 mat-line>{{car.model}}</h4>
+            <p mat-line> {{car.date | date}} </p>
           </mat-list-item>
-         <!--  <mat-divider></mat-divider> -->
+          <mat-divider></mat-divider>
           <h3 mat-subheader>Lada</h3>
           <button mat-button color="warn">Delete</button>
           <button mat-button color="primary">Buy</button>
@@ -37,4 +37,15 @@
         </mat-list>
   </div>
   <div class="item item-3" fxFlex="30%"></div>
-</div>
+</div> -->
+
+<mat-list>
+  <h3 mat-subheader>{{car.name}}</h3>
+  <button mat-button color="warn">Delete</button>
+  <button mat-button color="primary">Buy</button>
+  <mat-list-item *ngFor="let folder of folders">
+    <mat-icon mat-list-icon>folder</mat-icon>
+    <h4 mat-line>{{car.model}}</h4>
+    <p mat-line> {{car.date}} </p>
+  </mat-list-item>
+</mat-list>
