--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -38,12 +38,12 @@
   </div>
   <div class="item item-3" fxFlex="30%"></div>
 </div> -->
-
+<mat-divider></mat-divider>
 <mat-list>
-  <h3 mat-subheader>{{car.name}}</h3>
+  <h2>{{car.name}}</h2>
   <button mat-button color="warn">Delete</button>
   <button mat-button color="primary">Buy</button>
-  <mat-list-item *ngFor="let folder of folders">
+  <mat-list-item>
     <mat-icon mat-list-icon>folder</mat-icon>
     <h4 mat-line>{{car.model}}</h4>
     <p mat-line> {{car.date}} </p>
