--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<mat-card class="card-demo mat-card">
+<mat-card class="card-demo mat-card" style="padding: 0;">
   <mat-card-content>
-    <app-car-form></app-car-form>
+    <app-car-form
+    (addCar)="onAdd($event)"
+    ></app-car-form>
     <app-car
+      (deleteCar)="onDelete($event)"
       [car]="c"
       *ngFor="let c of cars"
     ></app-car>
