--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,51 +1,13 @@
-<!-- 
-
-<div class="container"
-     fxLayout
-     fxLayout.xs="column"
-     fxLayoutAlign="center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-  <div class="item item-1" fxFlex="30%"></div>
-  <div class="item item-2" fxFlex="">
-      <mat-list>
-          <h3 mat-subheader>{{car.name}}</h3>
-          <button mat-button color="warn">Delete</button>
-          <button mat-button color="primary">Buy</button>
-          <mat-list-item *ngFor="let folder of folders">
-            <mat-icon mat-list-icon>folder</mat-icon>
-            <h4 mat-line>{{car.model}}</h4>
-            <p mat-line> {{car.date | date}} </p>
-          </mat-list-item>
-          <mat-divider></mat-divider>
-          <h3 mat-subheader>Lada</h3>
-          <button mat-button color="warn">Delete</button>
-          <button mat-button color="primary">Buy</button>
-          <mat-list-item *ngFor="let note of notes">
-            <mat-icon mat-list-icon>note</mat-icon>
-            <h4 mat-line>{{note.name}}</h4>
-            <p mat-line> {{note.updated | date}} </p>
-          </mat-list-item>
-          <h3 mat-subheader>Mersedes</h3>
-          <button mat-button color="warn">Delete</button>
-          <button mat-button color="primary">Buy</button>
-          <mat-list-item *ngFor="let note of notes">
-            <mat-icon mat-list-icon>note</mat-icon>
-            <h4 mat-line>{{note.name}}</h4>
-            <p mat-line> {{note.updated | date}} </p>
-          </mat-list-item>
-        </mat-list>
-  </div>
-  <div class="item item-3" fxFlex="30%"></div>
-</div> -->
-<mat-divider></mat-divider>
-<mat-list>
-  <h2>{{car.name}}</h2>
-  <button mat-button color="warn">Delete</button>
-  <button mat-button color="primary">Buy</button>
-  <mat-list-item>
-    <mat-icon mat-list-icon>folder</mat-icon>
-    <h4 mat-line>{{car.model}}</h4>
-    <p mat-line> {{car.date}} </p>
-  </mat-list-item>
-</mat-list>
+<div [ngClass]="{'danger': car.isSold}">
+    <mat-divider></mat-divider>
+    <mat-list style="margin-left: 40px;">
+      <h2>{{car.name}}</h2>
+      <button (click)="onDelete()" mat-button color="warn">Delete</button>
+      <button (click)="onBuy()" [disabled]="car.isSold" mat-button color="primary">Buy</button>
+      <mat-list-item>
+        <mat-icon mat-list-icon>directions_car</mat-icon>
+        <h4 mat-line>{{car.model}}</h4>
+        <p mat-line> {{car.date}} </p>
+      </mat-list-item>
+    </mat-list>
+</div>
